@@ -83,3 +83,4 @@ org.apache.tika.parser.external.CompositeExternalParser
 org.apache.tika.parser.journal.JournalParser
 org.apache.tika.parser.image.ICNSParser
 org.apache.tika.parser.dbf.DBFParser
+org.apache.tika.parser.xliff.XLIFF12Parser
